testsuite/lab2-testsuite/good/if_state_propagation.cc
int main() {
  let int x;

  if ((x = 1) == 1) {} else {}

  printInt(x);

  return 0;
}
