testsuite/lab2-testsuite/bad/cmp_if_int_neq_bool.cc
int main () {
	let int x;
	if (3 != true)
		x = 1;
	else {}
	return 0;
}
